Super important commit

--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -354,11 +354,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 61,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T22:42:36.600041Z",
-     "start_time": "2019-03-21T22:42:36.595558Z"
+     "end_time": "2019-03-21T22:43:24.983681Z",
+     "start_time": "2019-03-21T22:43:24.979730Z"
     }
    },
    "outputs": [
@@ -367,7 +367,8 @@
      "output_type": "stream",
      "text": [
       "0 1\n",
-      "1 2\n"
+      "1 2\n",
+      "3\n"
      ]
     }
    ],
@@ -376,7 +377,7 @@
     "for index, element in enumerate(temp):\n",
     "    print(index,element)\n",
     "    \n",
-    "print(sum(index,_ for in enumerate(temp)))"
+    "print(sum(element for index,element in enumerate(temp)))"
    ]
   },
   {
