Super important commit

--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -354,11 +354,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 68,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T22:43:57.287500Z",
-     "start_time": "2019-03-21T22:43:57.282516Z"
+     "end_time": "2019-03-21T22:44:46.154505Z",
+     "start_time": "2019-03-21T22:44:46.149025Z"
     }
    },
    "outputs": [
@@ -366,6 +366,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[1, 2]\n",
       "0 1\n",
       "1 2\n",
       "4.9\n"
@@ -373,7 +374,9 @@
     }
    ],
    "source": [
-    "temp=[1,2]\n",
+    "temp=[1,2,3]\n",
+    "temp=temp[:2]\n",
+    "print(temp)\n",
     "for index, element in enumerate(temp):\n",
     "    print(index,element)\n",
     "vaa = 0.9\n",
