--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -277,6 +277,7 @@
     "            if game_over: break\n",
     "                \n",
     "        V[two_eps_list[-1]] = 0 if not two_eps_list[-1] in V else V[two_eps_list[-1]] \n",
+    "        two_rwd_list = two_rwd_list[:2]\n",
     "        V[two_eps_list[0]]  = V[two_eps_list[0]] + step_size*(two_rwd_list[0] +step_size*two_rwd_list[1]+(step_size**2)*V[two_eps_list[-1]] - V[two_eps_list[0]])\n",
     "        observation    = two_eps_list[1]\n",
     "        \n",
@@ -354,11 +355,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 69,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T22:44:46.154505Z",
-     "start_time": "2019-03-21T22:44:46.149025Z"
+     "end_time": "2019-03-21T22:44:50.448614Z",
+     "start_time": "2019-03-21T22:44:50.442152Z"
     }
    },
    "outputs": [
@@ -366,15 +367,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2]\n",
+      "[1]\n",
       "0 1\n",
-      "1 2\n",
-      "4.9\n"
+      "2.0\n"
      ]
     }
    ],
    "source": [
-    "temp=[1,2,3]\n",
+    "temp=[1]\n",
     "temp=temp[:2]\n",
     "print(temp)\n",
     "for index, element in enumerate(temp):\n",
