--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -278,7 +278,7 @@
     "                \n",
     "        V[two_eps_list[-1]] = 0 if not two_eps_list[-1] in V else V[two_eps_list[-1]] \n",
     "        two_rwd_list = two_rwd_list[:2]\n",
-    "        V[two_eps_list[0]]  = V[two_eps_list[0]] + step_size*(two_rwd_list[0] +step_size*two_rwd_list[1] +(step_size**2)*V[two_eps_list[-1]] - V[two_eps_list[0]])\n",
+    "        V[two_eps_list[0]]  = V[two_eps_list[0]] + step_size*(sum(element+vaa**index for index,element in enumerate(temp))+(step_size**2)*V[two_eps_list[-1]] - V[two_eps_list[0]])\n",
     "        observation    = two_eps_list[1]\n",
     "        \n",
     "        while not game_over: \n",
