Super important commit

--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -281,7 +281,8 @@
     "        V[two_eps_list[0]]  = V[two_eps_list[0]] + step_size*(sum(step_size**index * element for index,element in enumerate(two_rwd_list))+(step_size**2)*V[two_eps_list[-1]] - V[two_eps_list[0]])\n",
     "        #sdsa\n",
     "        print(two_eps_list)\n",
-    "        observation    = two_eps_list[1]\n",
+    "        two_eps_list  = two_eps_list[:2] \n",
+    "        observation   = two_eps_list[-1]\n",
     "        \n",
     "        while not game_over: \n",
     "            two_rwd_list   = []\n",
