Super important commit

--- a/representation learning/z just to see.ipynb
+++ b/representation learning/z just to see.ipynb
@@ -25,6 +25,9 @@
    },
    "outputs": [],
    "source": [
+    "def g(x): return np.tanh(x)\n",
+    "def g\n",
+    "\n",
     "N = 2\n",
     "M = 4\n",
     "x = np.ones((N,1))\n",
