Super important commit

--- a/representation learning/z just to see.ipynb
+++ b/representation learning/z just to see.ipynb
@@ -25,8 +25,8 @@
    },
    "outputs": [],
    "source": [
-    "def g(x): return np.tanh(x)\n",
-    "def g\n",
+    "def g(x):   return np.tanh(x)\n",
+    "def g_1(x): return 1-np.tanh(x)**2\n",
     "\n",
     "N = 2\n",
     "M = 4\n",
