Super important commit

--- a/representation learning/z just to see.ipynb
+++ b/representation learning/z just to see.ipynb
@@ -34,6 +34,7 @@
     "x = np.ones((N,1))\n",
     "W = np.random.normal((M,N))\n",
     "K = np.random.normal((M,M))\n",
+    "S = np.zeros((M,1))\n",
     "S = W @ X + "
    ]
   },
