--- a/representation learning/z just to see.ipynb
+++ b/representation learning/z just to see.ipynb
@@ -117,25 +117,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-25T15:30:36.495366Z",
-     "start_time": "2019-03-25T15:30:36.489381Z"
+     "end_time": "2019-03-25T15:31:31.528219Z",
+     "start_time": "2019-03-25T15:31:31.522234Z"
     }
    },
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-6-4557fbbdf6b4>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-7-30f3ebcedd77>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-6-4557fbbdf6b4>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    <img>\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-7-30f3ebcedd77>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    <img src=\"https://i.imgur.com/gDNChBk.png\",width=60,height=60>\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "<img> \n"
+    "<img src=\"https://i.imgur.com/gDNChBk.png\",width=60,height=60>"
    ]
   }
  ],
