Super important commit

--- a/representation learning/z just to see.ipynb
+++ b/representation learning/z just to see.ipynb
@@ -117,25 +117,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-25T15:31:31.528219Z",
-     "start_time": "2019-03-25T15:31:31.522234Z"
+     "end_time": "2019-03-25T15:32:24.545180Z",
+     "start_time": "2019-03-25T15:32:24.533210Z"
     }
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-7-30f3ebcedd77>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-7-30f3ebcedd77>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    <img src=\"https://i.imgur.com/gDNChBk.png\",width=60,height=60>\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/html": [
+       "<img src=\"https://i.imgur.com/gDNChBk.png\",width=60,height=60>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "<img src=\"https://i.imgur.com/gDNChBk.png\",width=60,height=60>"
+    "%%HTML\n",
+    "<img src=\"https://i.imgur.com/gDNChBk.png\",width=60,height=60>\n"
    ]
   }
  ],
