Super important commit

--- a/representation learning/z just to see.ipynb
+++ b/representation learning/z just to see.ipynb
@@ -117,18 +117,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-25T15:32:24.545180Z",
-     "start_time": "2019-03-25T15:32:24.533210Z"
-    }
+     "end_time": "2019-03-25T15:33:30.692465Z",
+     "start_time": "2019-03-25T15:33:30.686481Z"
+    },
+    "code_folding": [
+     0
+    ]
    },
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<img src=\"https://i.imgur.com/gDNChBk.png\",width=60,height=60>\n"
+       "<img src=\"https://i.imgur.com/gDNChBk.png\",width=60,height=60>\n",
+       "<img src=\"https://i.imgur.com/sTnzbJi.png\">\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -140,7 +144,8 @@
    ],
    "source": [
     "%%HTML\n",
-    "<img src=\"https://i.imgur.com/gDNChBk.png\",width=60,height=60>\n"
+    "<img src=\"https://i.imgur.com/gDNChBk.png\",width=60,height=60>\n",
+    "<img src=\"https://i.imgur.com/sTnzbJi.png\">"
    ]
   }
  ],
