Super important commit

--- a/representation learning/z just to see.ipynb
+++ b/representation learning/z just to see.ipynb
@@ -16,14 +16,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-25T15:28:23.568443Z",
-     "start_time": "2019-03-25T15:28:23.559472Z"
+     "end_time": "2019-03-25T15:34:12.415744Z",
+     "start_time": "2019-03-25T15:34:12.408763Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1,)\n"
+     ]
+    }
+   ],
    "source": [
     "def g(x):   return np.tanh(x)\n",
     "def g_1(x): return 1-np.tanh(x)**2\n",
@@ -31,11 +39,12 @@
     "\n",
     "N = 2\n",
     "M = 4\n",
-    "x = np.ones((N,1))\n",
+    "X = np.ones((N,1))\n",
     "W = np.random.normal((M,N))\n",
     "K = np.random.normal((M,M))\n",
     "S = np.zeros((M,1))\n",
-    "S1 = W @ X + "
+    "S1 = W @ X \n",
+    "print(S1.shape)"
    ]
   },
   {
