Super important commit

--- a/representation learning/z just to see.ipynb
+++ b/representation learning/z just to see.ipynb
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-25T15:34:12.415744Z",
-     "start_time": "2019-03-25T15:34:12.408763Z"
+     "end_time": "2019-03-25T15:35:11.279667Z",
+     "start_time": "2019-03-25T15:35:11.271726Z"
     }
    },
    "outputs": [
@@ -28,7 +28,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1,)\n"
+      "(4, 1)\n",
+      "[[-0.39434389]\n",
+      " [-0.72956142]\n",
+      " [ 0.36883464]\n",
+      " [ 0.9841656 ]]\n"
      ]
     }
    ],
@@ -40,11 +44,12 @@
     "N = 2\n",
     "M = 4\n",
     "X = np.ones((N,1))\n",
-    "W = np.random.normal((M,N))\n",
-    "K = np.random.normal((M,M))\n",
+    "W = np.random.normal(size=(M,N))\n",
+    "K = np.random.normal(size=(M,M))\n",
     "S = np.zeros((M,1))\n",
-    "S1 = W @ X \n",
-    "print(S1.shape)"
+    "S1 = g(W @ X + K @ S)\n",
+    "print(S1.shape)\n",
+    "print(S1)"
    ]
   },
   {
