--- a/representation learning/z just to see.ipynb
+++ b/representation learning/z just to see.ipynb
@@ -54,10 +54,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 26,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-25T15:40:02.423118Z",
+     "start_time": "2019-03-25T15:40:02.417054Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 1)\n",
+      "[[1. 0. 0. 0.]\n",
+      " [0. 1. 0. 0.]\n",
+      " [0. 0. 1. 0.]\n",
+      " [0. 0. 0. 1.]]\n",
+      "[[0.8444929 ]\n",
+      " [0.46774014]\n",
+      " [0.86396101]\n",
+      " [0.03141808]]\n",
+      "[[0.8444929 ]\n",
+      " [0.46774014]\n",
+      " [0.86396101]\n",
+      " [0.03141808]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp = g_1(W @ X + K @ S)\n",
+    "print(temp.shape)\n",
+    "X_change = (1)"
+   ]
   },
   {
    "cell_type": "code",
