Super important commit

--- a/representation learning/z just to see.ipynb
+++ b/representation learning/z just to see.ipynb
@@ -54,11 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-25T15:40:02.423118Z",
-     "start_time": "2019-03-25T15:40:02.417054Z"
+     "end_time": "2019-03-25T15:41:52.233917Z",
+     "start_time": "2019-03-25T15:41:52.228894Z"
     }
    },
    "outputs": [
@@ -67,33 +67,44 @@
      "output_type": "stream",
      "text": [
       "(4, 1)\n",
-      "[[1. 0. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 0. 1.]]\n",
-      "[[0.8444929 ]\n",
-      " [0.46774014]\n",
-      " [0.86396101]\n",
-      " [0.03141808]]\n",
-      "[[0.8444929 ]\n",
-      " [0.46774014]\n",
-      " [0.86396101]\n",
-      " [0.03141808]]\n"
+      "(4, 4)\n",
+      "(4, 2)\n"
      ]
     }
    ],
    "source": [
     "temp = g_1(W @ X + K @ S)\n",
     "print(temp.shape)\n",
-    "X_change = (1)"
+    "omega   = (1/temp - K) ** -1\n",
+    "x_delta = omega @ W \n",
+    "\n",
+    "print(omega.shape)\n",
+    "print(x_delta.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 32,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-25T15:42:36.865287Z",
+     "start_time": "2019-03-25T15:42:36.860299Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-32-acf2a621aab1>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-32-acf2a621aab1>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    tau = (x_delta.T @ x_delta) ** -1 x_delta.T @ omega\u001b[0m\n\u001b[1;37m                                            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "tau = (x_delta.T @ x_delta) ** -1 x_delta.T @ omega\n",
+    "print(tau.shape)"
+   ]
   },
   {
    "cell_type": "code",
