Super important commit

--- a/representation learning/z just to see.ipynb
+++ b/representation learning/z just to see.ipynb
@@ -84,25 +84,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-25T15:42:36.865287Z",
-     "start_time": "2019-03-25T15:42:36.860299Z"
+     "end_time": "2019-03-25T15:43:48.690369Z",
+     "start_time": "2019-03-25T15:43:48.684376Z"
     }
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-32-acf2a621aab1>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-32-acf2a621aab1>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    tau = (x_delta.T @ x_delta) ** -1 x_delta.T @ omega\u001b[0m\n\u001b[1;37m                                            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 4)\n",
+      "(4, 2)\n",
+      "(2, 4)\n"
      ]
     }
    ],
    "source": [
-    "tau = (x_delta.T @ x_delta) ** -1 x_delta.T @ omega\n",
+    "tau   = (x_delta.T @ x_delta) ** -1 @ x_delta.T @ omega\n",
+    "gamma = (x_delta @ tau) \n",
+    "\n",
+    "ttss = g_2(W @ X + K @ S)/g_1(W @ X + K @ S) \n",
+    "\n",
+    "print(gamma.shape)\n",
+    "\n",
+    "print(W.shape)\n",
     "print(tau.shape)"
    ]
   },
