Super important commit

--- a/representation learning/z just to see.ipynb
+++ b/representation learning/z just to see.ipynb
@@ -84,11 +84,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-25T15:43:48.690369Z",
-     "start_time": "2019-03-25T15:43:48.684376Z"
+     "end_time": "2019-03-25T15:45:57.782071Z",
+     "start_time": "2019-03-25T15:45:57.775091Z"
     }
    },
    "outputs": [
@@ -96,22 +96,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4, 4)\n",
       "(4, 2)\n",
-      "(2, 4)\n"
+      "(4, 2)\n",
+      "[[18.5096207  20.12319062]\n",
+      " [17.82071805 19.36249995]\n",
+      " [18.60183611 21.02123767]\n",
+      " [16.99791803 18.28133633]]\n"
      ]
     }
    ],
    "source": [
     "tau   = (x_delta.T @ x_delta) ** -1 @ x_delta.T @ omega\n",
-    "gamma = (x_delta @ tau) \n",
-    "\n",
-    "ttss = g_2(W @ X + K @ S)/g_1(W @ X + K @ S) \n",
-    "\n",
-    "print(gamma.shape)\n",
+    "gamma = (x_delta @ tau) @  g_2(W @ X + K @ S)/g_1(W @ X + K @ S) ** 3\n",
+    "final = omega.T @ gamma @ X.T\n",
+    "gradient = (tau.T + final)\n",
+    "print(gradient.shape)\n",
     "\n",
     "print(W.shape)\n",
-    "print(tau.shape)"
+    "print(\n",
+    "gradient\n",
+    ")"
    ]
   },
   {
