Super important commit

--- a/reinforcement learning/MCTS/first .ipynb
+++ b/reinforcement learning/MCTS/first .ipynb
@@ -427,6 +427,7 @@
     "  \n",
     "# function for node traversal \n",
     "def traverse(node): \n",
+    "    # here we are just going down the tree\n",
     "    while fully_expanded(node): \n",
     "        node = best_uct(node) \n",
     "          \n",
@@ -435,6 +436,7 @@
     "  \n",
     "# function for the result of the simulation \n",
     "def rollout(node): \n",
+    "    # until not terminal we are going to roll out - > play out\n",
     "    while non_terminal(node): \n",
     "        node = rollout_policy(node) \n",
     "    return result(node)  \n",
@@ -444,6 +446,7 @@
     "    return pick_random(node.children) \n",
     "  \n",
     "# function for backpropagation \n",
+    "# this seems to be a bell man type of equation\n",
     "def backpropagate(node, result): \n",
     "    if is_root(node) return\n",
     "    node.stats = update_stats(node, result)  \n",
@@ -451,8 +454,7 @@
     "  \n",
     "# function for selecting the best child \n",
     "# node with highest number of visits \n",
-    "def best_child(node): \n",
-    "    pick child with highest number of visits "
+    "def best_child(node):  pick child with highest number of visits "
    ]
   },
   {
