--- a/reinforcement learning/MCTS/first .ipynb
+++ b/reinforcement learning/MCTS/first .ipynb
@@ -411,9 +411,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-26T21:50:50.494826Z",
+     "start_time": "2019-03-26T21:50:50.483818Z"
+    },
+    "code_folding": [
+     0
+    ]
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-2-f79107858af3>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-2-f79107858af3>\"\u001b[1;36m, line \u001b[1;32m4\u001b[0m\n\u001b[1;33m    while resources_left(time, computational power):\u001b[0m\n\u001b[1;37m                                                 ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# main function for the Monte Carlo Tree Search \n",
     "def monte_carlo_tree_search(root): \n",
