Super important commit

--- a/reinforcement learning/MCTS/first .ipynb
+++ b/reinforcement learning/MCTS/first .ipynb
@@ -360,7 +360,14 @@
     "ExecuteTime": {
      "end_time": "2019-03-26T21:56:34.306807Z",
      "start_time": "2019-03-26T21:56:34.148257Z"
-    }
+    },
+    "code_folding": [
+     84,
+     136,
+     250,
+     307,
+     344
+    ]
    },
    "outputs": [
     {
@@ -692,7 +699,6 @@
     "        for c in self.childNodes:\n",
     "             s += str(c) + \"\\n\"\n",
     "        return s\n",
-    "\n",
     "\n",
     "def UCT(rootstate, itermax, verbose = False):\n",
     "    \"\"\" Conduct a UCT search for itermax iterations starting from rootstate.\n",
