Super important commit

--- a/reinforcement learning/MCTS/first .ipynb
+++ b/reinforcement learning/MCTS/first .ipynb
@@ -124,14 +124,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 47,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-27T03:06:44.792440Z",
-     "start_time": "2019-03-27T03:06:44.603928Z"
+     "end_time": "2019-03-27T03:19:08.561696Z",
+     "start_time": "2019-03-27T03:19:08.384179Z"
     },
-    "code_folding": [],
-    "scrolled": false
+    "code_folding": [
+     36,
+     39,
+     45,
+     51
+    ],
+    "collapsed": true
    },
    "outputs": [
     {
@@ -142,109 +147,109 @@
       "...\n",
       "...\n",
       "\n",
-      "[M:1 W/V:12.0/14 U:[]]\n",
-      "[M:0 W/V:8.5/11 U:[]]\n",
-      "[M:3 W/V:7.5/11 U:[]]\n",
-      "[M:4 W/V:12.0/14 U:[]]\n",
-      "[M:6 W/V:8.0/11 U:[]]\n",
-      "[M:2 W/V:9.0/12 U:[]]\n",
-      "[M:7 W/V:4.5/8 U:[6]]\n",
-      "[M:8 W/V:6.5/10 U:[]]\n",
-      "[M:5 W/V:5.5/9 U:[]]\n",
-      "\n",
-      "Best Move: 4\n",
-      "\n",
-      "...\n",
-      ".X.\n",
-      "...\n",
-      "\n",
-      "[M:2 W/V:20.5/109 U:[]]\n",
-      "[M:7 W/V:1.5/52 U:[]]\n",
-      "[M:1 W/V:23.0/116 U:[]]\n",
-      "[M:6 W/V:6.0/67 U:[]]\n",
-      "[M:3 W/V:28.0/129 U:[]]\n",
-      "[M:5 W/V:6.0/67 U:[]]\n",
-      "[M:0 W/V:142.5/398 U:[]]\n",
-      "[M:8 W/V:4.5/62 U:[]]\n",
-      "\n",
-      "Best Move: 0\n",
-      "\n",
-      "O..\n",
-      ".X.\n",
-      "...\n",
-      "\n",
-      "[M:7 W/V:12.0/16 U:[]]\n",
-      "[M:8 W/V:12.0/16 U:[]]\n",
-      "[M:2 W/V:6.0/11 U:[]]\n",
-      "[M:6 W/V:7.5/12 U:[]]\n",
-      "[M:1 W/V:14.5/19 U:[]]\n",
-      "[M:5 W/V:6.0/11 U:[]]\n",
-      "[M:3 W/V:11.0/15 U:[]]\n",
-      "\n",
-      "Best Move: 1\n",
-      "\n",
-      "OX.\n",
-      ".X.\n",
-      "...\n",
-      "\n",
-      "[M:3 W/V:59.0/219 U:[]]\n",
-      "[M:6 W/V:57.5/215 U:[]]\n",
-      "[M:2 W/V:19.0/112 U:[]]\n",
-      "[M:7 W/V:71.0/249 U:[]]\n",
-      "[M:5 W/V:24.0/126 U:[]]\n",
-      "[M:8 W/V:8.0/79 U:[]]\n",
-      "\n",
-      "Best Move: 7\n",
-      "\n",
-      "OX.\n",
-      ".X.\n",
-      ".O.\n",
-      "\n",
-      "[M:8 W/V:5.5/11 U:[]]\n",
-      "[M:2 W/V:13.0/19 U:[]]\n",
-      "[M:3 W/V:17.5/23 U:[]]\n",
-      "[M:6 W/V:23.0/28 U:[]]\n",
-      "[M:5 W/V:13.5/19 U:[]]\n",
-      "\n",
-      "Best Move: 6\n",
-      "\n",
-      "OX.\n",
-      ".X.\n",
-      "XO.\n",
-      "\n",
-      "[M:2 W/V:389.0/826 U:[]]\n",
-      "[M:3 W/V:10.0/68 U:[]]\n",
-      "[M:8 W/V:0.0/39 U:[]]\n",
-      "[M:5 W/V:9.5/67 U:[]]\n",
+      "[M:8 W/V:3.5/7 U:[2, 7]]\n",
+      "[M:2 W/V:13.5/15 U:[]]\n",
+      "[M:3 W/V:8.5/11 U:[]]\n",
+      "[M:1 W/V:3.0/7 U:[0, 3]]\n",
+      "[M:0 W/V:11.5/14 U:[]]\n",
+      "[M:6 W/V:9.5/12 U:[]]\n",
+      "[M:5 W/V:4.5/8 U:[0]]\n",
+      "[M:4 W/V:9.5/12 U:[]]\n",
+      "[M:7 W/V:12.0/14 U:[]]\n",
       "\n",
       "Best Move: 2\n",
       "\n",
-      "OXO\n",
-      ".X.\n",
-      "XO.\n",
+      "..X\n",
+      "...\n",
+      "...\n",
       "\n",
-      "[M:3 W/V:24.0/39 U:[]]\n",
-      "[M:8 W/V:12.5/25 U:[]]\n",
-      "[M:5 W/V:21.5/36 U:[]]\n",
+      "[M:0 W/V:78.0/220 U:[]]\n",
+      "[M:1 W/V:26.0/107 U:[]]\n",
+      "[M:8 W/V:14.0/78 U:[]]\n",
+      "[M:4 W/V:35.5/129 U:[]]\n",
+      "[M:7 W/V:17.0/85 U:[]]\n",
+      "[M:3 W/V:41.5/142 U:[]]\n",
+      "[M:5 W/V:26.0/107 U:[]]\n",
+      "[M:6 W/V:37.0/132 U:[]]\n",
       "\n",
-      "Best Move: 3\n",
+      "Best Move: 0\n",
       "\n",
-      "OXO\n",
-      "XX.\n",
-      "XO.\n",
+      "O.X\n",
+      "...\n",
+      "...\n",
       "\n",
+      "[M:4 W/V:15.0/22 U:[]]\n",
+      "[M:6 W/V:14.5/22 U:[]]\n",
+      "[M:3 W/V:6.0/13 U:[]]\n",
+      "[M:7 W/V:0.5/6 U:[8]]\n",
+      "[M:8 W/V:9.0/16 U:[]]\n",
+      "[M:5 W/V:4.0/11 U:[]]\n",
+      "[M:1 W/V:3.5/10 U:[]]\n",
+      "\n",
+      "Best Move: 6\n",
+      "\n",
+      "O.X\n",
+      "...\n",
+      "X..\n",
+      "\n",
+      "[M:7 W/V:16.0/63 U:[]]\n",
+      "[M:4 W/V:427.5/724 U:[]]\n",
+      "[M:3 W/V:8.0/46 U:[]]\n",
+      "[M:8 W/V:20.0/71 U:[]]\n",
+      "[M:1 W/V:5.0/39 U:[]]\n",
+      "[M:5 W/V:13.0/57 U:[]]\n",
+      "\n",
+      "Best Move: 4\n",
+      "\n",
+      "O.X\n",
+      ".O.\n",
+      "X..\n",
+      "\n",
+      "[M:8 W/V:26.0/44 U:[]]\n",
+      "[M:7 W/V:5.0/17 U:[]]\n",
+      "[M:3 W/V:1.0/10 U:[]]\n",
+      "[M:1 W/V:2.0/11 U:[]]\n",
+      "[M:5 W/V:6.0/18 U:[]]\n",
+      "\n",
+      "Best Move: 8\n",
+      "\n",
+      "O.X\n",
+      ".O.\n",
+      "X.X\n",
+      "\n",
+      "[M:7 W/V:239.5/451 U:[]]\n",
+      "[M:3 W/V:11.0/55 U:[]]\n",
+      "[M:5 W/V:236.5/446 U:[]]\n",
+      "[M:1 W/V:8.0/48 U:[]]\n",
+      "\n",
+      "Best Move: 7\n",
+      "\n",
+      "O.X\n",
+      ".O.\n",
+      "XOX\n",
+      "\n",
+      "[M:3 W/V:2.0/15 U:[]]\n",
+      "[M:5 W/V:3.0/16 U:[]]\n",
+      "[M:1 W/V:40.0/69 U:[]]\n",
+      "\n",
+      "Best Move: 1\n",
+      "\n",
+      "OXX\n",
+      ".O.\n",
+      "XOX\n",
+      "\n",
+      "[M:3 W/V:0.0/36 U:[]]\n",
       "[M:5 W/V:482.0/964 U:[]]\n",
-      "[M:8 W/V:0.0/36 U:[]]\n",
       "\n",
       "Best Move: 5\n",
       "\n",
-      "OXO\n",
-      "XXO\n",
-      "XO.\n",
+      "OXX\n",
+      ".OO\n",
+      "XOX\n",
       "\n",
-      "[M:8 W/V:50.0/100 U:[]]\n",
+      "[M:3 W/V:50.0/100 U:[]]\n",
       "\n",
-      "Best Move: 8\n",
+      "Best Move: 3\n",
       "\n",
       "Nobody wins!\n"
      ]
@@ -290,13 +295,13 @@
     "    def __repr__(self):\n",
     "        return \"[M:\" + str(self.move) + \" W/V:\" + str(self.wins) + \"/\" + str(self.visits) + \" U:\" + str(self.untriedMoves) + \"]\"\n",
     "\n",
-    "    def TreeToString(self, indent):\n",
+    "    def TreeToString(self, indent=1):\n",
     "        s = self.IndentString(indent) + str(self)\n",
     "        for c in self.childNodes:\n",
     "             s += c.TreeToString(indent+1)\n",
     "        return s\n",
     "\n",
-    "    def IndentString(self,indent):\n",
+    "    def IndentString(self,indent=1):\n",
     "        s = \"\\n\"\n",
     "        for i in range (1,indent+1):\n",
     "            s += \"| \"\n",
@@ -424,11 +429,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-27T03:18:30.068456Z",
-     "start_time": "2019-03-27T03:18:30.057935Z"
+     "end_time": "2019-03-27T03:19:18.070749Z",
+     "start_time": "2019-03-27T03:19:18.065788Z"
     }
    },
    "outputs": [
@@ -437,18 +442,9 @@
      "output_type": "stream",
      "text": [
       "[0, 1, 2, 3, 4, 5, 6, 7, 8]\n",
-      "['AddChild', 'ChildrenToString', 'IndentString', 'TreeToString', 'UCTSelectChild', 'Update', '__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'childNodes', 'move', 'parentNode', 'playerJustMoved', 'untriedMoves', 'visits', 'wins']\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "TreeToString() missing 1 required positional argument: 'indent'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-42-17cccc7764df>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mmy_node\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mNode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mstate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmy_node\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmy_node\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mTreeToString\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: TreeToString() missing 1 required positional argument: 'indent'"
+      "['AddChild', 'ChildrenToString', 'IndentString', 'TreeToString', 'UCTSelectChild', 'Update', '__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'childNodes', 'move', 'parentNode', 'playerJustMoved', 'untriedMoves', 'visits', 'wins']\n",
+      "\n",
+      "| [M:None W/V:0/0 U:[]]\n"
      ]
     }
    ],
