Super important commit

--- a/reinforcement learning/MCTS/first .ipynb
+++ b/reinforcement learning/MCTS/first .ipynb
@@ -458,7 +458,15 @@
     "\n",
     "my_node = Node(state=state)\n",
     "print(dir(my_node))\n",
-    "print(my_node.TreeToString())"
+    "print(my_node.TreeToString())\n",
+    "\n",
+    "        node  = rootnode\n",
+    "        state = rootstate.Clone()\n",
+    "\n",
+    "        # Select\n",
+    "        while node.untriedMoves == [] and node.childNodes != []: # node is fully expanded and non-terminal\n",
+    "            node = node.UCTSelectChild()\n",
+    "            state.DoMove(node.move)"
    ]
   },
   {
