Super important commit

--- a/reinforcement learning/MCTS/first .ipynb
+++ b/reinforcement learning/MCTS/first .ipynb
@@ -470,7 +470,7 @@
     "\n",
     "while my_node.untriedMoves == [] and my_node.childNodes != []: # node is fully expanded and non-terminal\n",
     "    my_node = my_node.UCTSelectChild()\n",
-    "    state.DoMove(node.move)"
+    "    my_state_copy.DoMove(my_node.move)"
    ]
   },
   {
