Super important commit

--- a/reinforcement learning/MCTS/first .ipynb
+++ b/reinforcement learning/MCTS/first .ipynb
@@ -111,7 +111,9 @@
     "                else:\n",
     "                    return 0.0\n",
     "        if self.GetMoves() == []: return 0.5 # draw\n",
-    "\n",
+    "    \n",
+    "    def Gameover(self):\n",
+    "        \n",
     "    def __repr__(self):\n",
     "        s= \"\"\n",
     "        for i in range(9): \n",
