Super important commit

--- a/reinforcement learning/MCTS/first .ipynb
+++ b/reinforcement learning/MCTS/first .ipynb
@@ -19,11 +19,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 67,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T22:12:03.702618Z",
-     "start_time": "2019-03-26T22:12:03.686657Z"
+     "end_time": "2019-03-27T03:45:37.626239Z",
+     "start_time": "2019-03-27T03:45:37.611228Z"
     },
     "code_folding": [
      1,
@@ -113,7 +113,11 @@
     "        if self.GetMoves() == []: return 0.5 # draw\n",
     "    \n",
     "    def Gameover(self):\n",
-    "        \n",
+    "        for (x,y,z) in [(0,1,2),(3,4,5),(6,7,8),(0,3,6),(1,4,7),(2,5,8),(0,4,8),(2,4,6)]:\n",
+    "            if self.board[x] == self.board[y] == self.board[z] and not self.board[z]==0 :\n",
+    "                return True\n",
+    "        return False\n",
+    "    \n",
     "    def __repr__(self):\n",
     "        s= \"\"\n",
     "        for i in range(9): \n",
@@ -124,11 +128,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 70,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-27T03:43:09.043327Z",
-     "start_time": "2019-03-27T03:43:08.861816Z"
+     "end_time": "2019-03-27T03:46:03.993267Z",
+     "start_time": "2019-03-27T03:46:03.839677Z"
     },
     "code_folding": [
      39,
@@ -146,93 +150,67 @@
       "...\n",
       "...\n",
       "\n",
-      "[M:5 Wins/Visits:1.0/1 U:[0, 1, 2, 3, 4, 6, 7, 8]]\n",
-      "[M:8 Wins/Visits:1.0/1 U:[0, 1, 2, 3, 4, 5, 6, 7]]\n",
-      "\n",
-      "Best Move: 8\n",
-      "\n",
-      "...\n",
-      "...\n",
-      "..X\n",
-      "\n",
-      "[M:7 Wins/Visits:22.0/76 U:[]]\n",
-      "[M:6 Wins/Visits:38.0/107 U:[]]\n",
-      "[M:0 Wins/Visits:125.5/259 U:[]]\n",
-      "[M:5 Wins/Visits:32.0/96 U:[]]\n",
-      "[M:1 Wins/Visits:42.5/116 U:[]]\n",
-      "[M:4 Wins/Visits:52.0/133 U:[]]\n",
-      "[M:2 Wins/Visits:65.0/156 U:[]]\n",
-      "[M:3 Wins/Visits:12.5/57 U:[]]\n",
-      "\n",
-      "Best Move: 0\n",
-      "\n",
-      "O..\n",
-      "...\n",
-      "..X\n",
-      "\n",
-      "[M:4 Wins/Visits:0.0/1 U:[1, 2, 3, 5, 6, 7]]\n",
-      "[M:7 Wins/Visits:0.0/1 U:[1, 2, 3, 4, 5, 6]]\n",
-      "\n",
-      "Best Move: 7\n",
-      "\n",
-      "O..\n",
-      "...\n",
-      ".XX\n",
-      "\n",
-      "[M:3 Wins/Visits:20.0/46 U:[]]\n",
-      "[M:2 Wins/Visits:85.0/128 U:[]]\n",
-      "[M:6 Wins/Visits:592.5/695 U:[]]\n",
-      "[M:1 Wins/Visits:20.5/47 U:[]]\n",
-      "[M:5 Wins/Visits:16.5/41 U:[]]\n",
-      "[M:4 Wins/Visits:18.0/43 U:[]]\n",
-      "\n",
-      "Best Move: 6\n",
-      "\n",
-      "O..\n",
-      "...\n",
-      "OXX\n",
-      "\n",
-      "[M:2 Wins/Visits:0.5/1 U:[1, 3, 4, 5]]\n",
-      "[M:4 Wins/Visits:0.5/1 U:[1, 2, 3, 5]]\n",
-      "\n",
-      "Best Move: 4\n",
-      "\n",
-      "O..\n",
-      ".X.\n",
-      "OXX\n",
-      "\n",
-      "[M:2 Wins/Visits:245.0/259 U:[]]\n",
-      "[M:3 Wins/Visits:442.0/442 U:[]]\n",
-      "[M:5 Wins/Visits:21.5/38 U:[]]\n",
-      "[M:1 Wins/Visits:247.0/261 U:[]]\n",
-      "\n",
-      "Best Move: 3\n",
-      "\n",
-      "O..\n",
-      "OX.\n",
-      "OXX\n",
-      "\n",
-      "[M:5 Wins/Visits:0.0/1 U:[1, 2]]\n",
-      "[M:2 Wins/Visits:0.0/1 U:[1, 5]]\n",
-      "\n",
-      "Best Move: 2\n",
-      "\n",
-      "O.X\n",
-      "OX.\n",
-      "OXX\n",
-      "\n",
-      "[M:5 Wins/Visits:500.0/500 U:[]]\n",
-      "[M:1 Wins/Visits:500.0/500 U:[]]\n",
+      "[M:7 Wins/Visits:0.0/1 U:[0, 1, 2, 3, 4, 5, 6, 8]]\n",
+      "[M:1 Wins/Visits:1.0/1 U:[0, 2, 3, 4, 5, 6, 7, 8]]\n",
       "\n",
       "Best Move: 1\n",
       "\n",
-      "OOX\n",
+      ".X.\n",
+      "...\n",
+      "...\n",
+      "\n",
+      "[M:8 Wins/Visits:25.0/97 U:[]]\n",
+      "[M:3 Wins/Visits:35.5/120 U:[]]\n",
+      "[M:0 Wins/Visits:56.0/162 U:[]]\n",
+      "[M:5 Wins/Visits:15.5/75 U:[]]\n",
+      "[M:4 Wins/Visits:81.5/213 U:[]]\n",
+      "[M:2 Wins/Visits:35.5/118 U:[]]\n",
+      "[M:7 Wins/Visits:13.5/70 U:[]]\n",
+      "[M:6 Wins/Visits:47.5/145 U:[]]\n",
+      "\n",
+      "Best Move: 4\n",
+      "\n",
+      ".X.\n",
+      ".O.\n",
+      "...\n",
+      "\n",
+      "[M:2 Wins/Visits:1.0/1 U:[0, 3, 5, 6, 7, 8]]\n",
+      "[M:7 Wins/Visits:0.0/1 U:[0, 2, 3, 5, 6, 8]]\n",
+      "\n",
+      "Best Move: 7\n",
+      "\n",
+      ".X.\n",
+      ".O.\n",
+      ".X.\n",
+      "\n",
+      "[M:6 Wins/Visits:128.5/173 U:[]]\n",
+      "[M:8 Wins/Visits:44.0/74 U:[]]\n",
+      "[M:3 Wins/Visits:37.5/66 U:[]]\n",
+      "[M:2 Wins/Visits:60.5/94 U:[]]\n",
+      "[M:5 Wins/Visits:19.0/42 U:[]]\n",
+      "[M:0 Wins/Visits:481.0/551 U:[]]\n",
+      "\n",
+      "Best Move: 0\n",
+      "\n",
       "OX.\n",
-      "OXX\n",
+      ".O.\n",
+      ".X.\n",
       "\n",
-      "[M:5 Wins/Visits:0.0/2 U:[]]\n",
+      "[M:2 Wins/Visits:0.0/1 U:[3, 5, 6, 8]]\n",
+      "[M:3 Wins/Visits:0.5/1 U:[2, 5, 6, 8]]\n",
       "\n",
-      "Best Move: 5\n",
+      "Best Move: 3\n",
+      "\n",
+      "OX.\n",
+      "XO.\n",
+      ".X.\n",
+      "\n",
+      "[M:5 Wins/Visits:21.5/38 U:[]]\n",
+      "[M:8 Wins/Visits:434.0/434 U:[]]\n",
+      "[M:6 Wins/Visits:246.5/260 U:[]]\n",
+      "[M:2 Wins/Visits:255.0/268 U:[]]\n",
+      "\n",
+      "Best Move: 8\n",
       "\n",
       "Player 2 wins!\n"
      ]
@@ -334,6 +312,7 @@
     "\"\"\"\n",
     "state = OXOState() # uncomment to play OXO\n",
     "while (state.GetMoves() != []):\n",
+    "    if state.Gameover(): break\n",
     "    print(str(state))\n",
     "    if state.playerJustMoved == 1:\n",
     "        m = UCT(rootstate = state, itermax = 1000, verbose = False) # play with values for itermax and verbose = True\n",
@@ -342,7 +321,6 @@
     "    print(\"Best Move: \" + str(m) + \"\\n\")\n",
     "    state.DoMove(m)\n",
     "    \n",
-    "    if state.\n",
     "\n",
     "# print the \n",
     "if state.GetResult(state.playerJustMoved) == 1.0:  print(\"Player \" + str(state.playerJustMoved)     + \" wins!\")\n",
