Super important commit

--- a/reinforcement learning/MCTS/third.ipynb
+++ b/reinforcement learning/MCTS/third.ipynb
@@ -2,33 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-28T17:23:27.253158Z",
-     "start_time": "2019-03-28T17:23:00.828234Z"
+     "start_time": "2019-03-28T17:25:34.340Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Took 26.40294075012207 sec to run 10000 times\n"
-     ]
-    },
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'resource'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-54617bb24d3f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     75\u001b[0m \u001b[0mtock\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     76\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Took %s sec to run %s times\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mtock\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mtick\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnum_reads\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 77\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mresource\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     78\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Consumed %sB memory\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mresource\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetrusage\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresource\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mRUSAGE_SELF\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mru_maxrss\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'resource'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import math\n",
@@ -106,7 +86,7 @@
     "UCT_search(GameState(), num_reads)\n",
     "tock = time.time()\n",
     "print(\"Took %s sec to run %s times\" % (tock - tick, num_reads))\n",
-    "import resource\n",
+    "from resources import resources as resource\n",
     "print(\"Consumed %sB memory\" % resource.getrusage(resource.RUSAGE_SELF).ru_maxrss)"
    ]
   },
@@ -229,8 +209,8 @@
     "UCT_search(GameState(), num_reads)\n",
     "tock = time.time()\n",
     "print(\"Took %s sec to run %s times\" % (tock - tick, num_reads))\n",
-    "import resource\n",
-    "print(\"Consumed %sB memory\" % resource.getrusage(resource.RUSAGE_SELF).ru_maxrss)\n"
+    "from resources import resources as resource\n",
+    "print(\"Consumed %sB memory\" % resource.getrusage(resource.RUSAGE_SELF).ru_maxrss)"
    ]
   },
   {
