Super important commit

--- a/reinforcement learning/MCTS/third.ipynb
+++ b/reinforcement learning/MCTS/third.ipynb
@@ -2,13 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-03-28T17:26:48.785Z"
+     "end_time": "2019-03-28T17:27:12.978197Z",
+     "start_time": "2019-03-28T17:26:48.788050Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Took 24.17422127723694 sec to run 10000 times\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import math\n",
