Super important commit

--- a/reinforcement learning/MCTS/first .ipynb
+++ b/reinforcement learning/MCTS/first .ipynb
@@ -132,7 +132,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class my_node():\n",
+    "    \n",
+    "    def __init__(self,state):\n",
+    "        self.current_state\n",
+    "        self.number_visit = 0\n",
+    "        self.number_wins  = 0 \n",
+    "        self.states       = []\n",
+    "        "
+   ]
   },
   {
    "cell_type": "code",
