Super important commit

--- a/reinforcement learning/MCTS/first .ipynb
+++ b/reinforcement learning/MCTS/first .ipynb
@@ -135,11 +135,13 @@
    "source": [
     "class my_node():\n",
     "    \n",
-    "    def __init__(self,state):\n",
-    "        self.current_state\n",
+    "    def __init__(self,parent,state):\n",
+    "        self.parent = parent\n",
+    "        self.current_state= state\n",
     "        self.number_visit = 0\n",
     "        self.number_wins  = 0 \n",
-    "        self.states       = []\n",
+    "        self.childrens    = []\n",
+    "        self.avaiable_moves = \n",
     "        "
    ]
   },
@@ -180,7 +182,6 @@
      "start_time": "2019-03-28T05:02:02.259384Z"
     },
     "code_folding": [
-     0,
      39,
      43,
      47,
