--- a/reinforcement learning/MCTS/first .ipynb
+++ b/reinforcement learning/MCTS/first .ipynb
@@ -150,6 +150,11 @@
     "        self.number_wins  = 0 \n",
     "    \n",
     "    def select_a_node(self):\n",
+    "        temp = []\n",
+    "        for child_node in self.childrens:\n",
+    "            temp.append(\n",
+    "                (child_node.number_wins/child_node.number_visit+1) \n",
+    "            )\n",
     "        pass\n",
     "    \n",
     "    def AddChild(self):\n",
